tests/NormalTests/paczka1/fuzzy1/89822043.err
Error in line 11: PWsiksPNd S856 67v2
Error in line 16: PWsiksPNd S856 170,0
